<resources>
    <string name="app_name">WirelessFax</string>
    <string name="login_forget_label">&lt;u>忘记密码&lt;/u</string>
    <string name="fax_inbox">传真收件箱</string>
    <string name="fax_stared">星标传真件</string>
    <string name="fax_drift">草稿箱</string>
    <string name="fax_sended">已发送传真件</string>
    <string name="drawer_contacts_title">通讯录</string>
    <string name="drawer_fax_title">传真文件夹</string>
    <string name="contacts_menu_label">通讯录</string>
    <string name="drawer_open">drawer_open</string>
    <string name="drawer_close">drawer_close</string>
    <string name="toobar_inbox_title">收件箱</string>
    <string name="back">返回</string>
    <string name="transition">reveal</string>
    <string name="menu_combin_title">合并</string>
    <string name="pick_error_format">您选择的图片包含不支持的格式，请重新选择</string>
    <string name="detail_choose_signature_position">请点击屏幕选择签名的位置</string>
    <string name="detail_bottom_sheet_title">请手写签名：</string>
    <string name="detail_signature_del">删除</string>
    <string name="choose_tiff_title">请选择要操作的图片</string>
    <string name="confirm">确定</string>
    <string name="check_update_hint">检查更新中...</string>
</resources>
